# ghostlinklabs

./:  (2).gitignore  .env.example  .gitignore  .pre-commit-config.yaml  .shellcheckrc  1.txt  10 (2).txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2 (2).txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  (+253 more)
.github/agents/: LINK.agent.md
ghostlink/: __init__.py  audit.py  auth.py  auto_git.py  blueprint.py  config.py  database.py  diagnostics_cli.py  git_cli.py  health_monitor.py  link.py  link_agent.py  link_cli.py  main.py  reasoning.py  storage.py  translator.py  translator_README.md  troubleshooter.py
ghostlink/access/: implicit_unlock.py  operator_signature_gate.py  ritual_unlock.py  suggestive_trigger_probe.py  symbolic_ritual_resolver.py  tool_permission_layer.py
ghostlink/automation/: auto_trigger_engine.py  autonomous_repair_loop.py  lattice_watchdog.py  symbolic_task_scheduler.py  tool_chain_orchestrator.py
ghostlink/bio/: biological_trace_integrator.py  feedback_loop_receptor.py  neuro_signal_proxy.py  organic_lattice_mapper.py  symbolic_dna_encoder.py
ghostlink/boot/: init.py  symbolic_router.py  vault_loader.py
ghostlink/chains/: README.md  pipelines.md
ghostlink/core/: ai_providers.py  api_integration.py  archive.py  autonomous_agents.py  bind.py  calm.py  channel_echo.py  container.py  core.py  crypt.py  current.py  depth.py  drift.py  duality.py  forge.py  frame.py  gaps.py  gate.py  ghost.py  glass.py  grid.py  harmony.py  host.py  key.py  lens.py  link.py  lock_delta.py  marker.py  memory.py  mirror.py  mirror_shear.py  node.py  offset.py  path.py  pressure.py  prism.py  processors.py  pulse.py  resonance.py  scar_fiber.py  (+19 more)
kernel/: REBUILD_MAX.sh  boot.max.ucl  ghostcore.seed  gl-kernel.max.json  kernel.schema.json  signing.manifest.json
tests/: test_api_keys.py  test_app.py  test_ghostcore_seed.py  test_git_cli.py  test_translator.py
(+135 files in other folders)
